[package]
name = "bitcoin_observer"
version = "0.0.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]

[dependencies]
bitcoin = "0.13"

futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
bytes = "0.4"

log = "0.4"
env_logger = "0.5"
error-chain = "0.12"

[lib]
name = "libyabitcoin"
path = "src/lib/lib.rs"
