[package]
name = "yabitcoin"
version = "0.0.0"
authors = ["AtsukiTak <takatomgoo@gmail.com>"]

[dependencies]
bitcoin = "0.14"

futures = "0.1"
tokio = "0.1"
actix = "0.7"
trust-dns-resolver = "0.9"

bytes = "0.4"
rand = "0.5"
log = "0.4"
failure = "0.1"
failure_derive = "0.1"

[dev-dependencies]
env_logger = "0.5"

[lib]
name = "libyabitcoin"
path = "src/lib/lib.rs"
